--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,8 @@ dependencies {
     implementation "androidx.core:core-ktx:$coreKtx"
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation "androidx.cardview:cardview:$cardVersion"
+    implementation 'com.github.bumptech.glide:glide:4.5.0'
+    implementation 'io.github.ivanespitiac:imageslider:1.0.3'
     implementation "com.google.android.material:material:$materialVersion"
     implementation "androidx.recyclerview:recyclerview:$recyclerViewVersion"
     implementation 'androidx.appcompat:appcompat:1.1.0'
